Fix initial home logo & mix-preview, fix z-index backbutton

--- a/src/shared/components/back-button.scss
+++ b/src/shared/components/back-button.scss
@@ -11,4 +11,5 @@
     right: 35px;
     background-size: 45px;
     box-shadow: 5px 17px 57px -8px rgba(0,0,0,0.89);
+    z-index: 100;
 }
